--- a/airbnb-thankyou-xmas.mjml
+++ b/airbnb-thankyou-xmas.mjml
@@ -1,26 +1,79 @@
 <mjml>
-<mj-head>
+  <mj-head>
+  <mj-font name="Poppins"
+       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" />
     <mj-attributes>
       <mj-text padding="0" />
       <mj-class name="blue" color="blue" />
       <mj-class name="big" font-size="20px" />
-      <mj-all padding="0"/>
+      <mj-all padding="0" font-family="Poppins" />
+
+
+      https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap
     </mj-attributes>
+    <mj-style>
+      .divider div {
+        background: radial-gradient(circle, rgba(215, 194, 141, 1) 0%, rgba(255, 255, 255, 0.799) 100%);
+        color: #ffffff !important;
+        font-size: 1px !important;
+      }
+    </mj-style>
   </mj-head>
   <mj-body>
 
 
-  <!-- HEADER -->
-    <mj-section>
+    <!-- HEADER -->
+    <mj-section padding="20px 0px">
       <mj-column>
-
-        <mj-image width="100px" src="/assets/img/logo-small.png"></mj-image>
-
-        <mj-divider border-color="#F45E43"></mj-divider>
-
-        <mj-text font-size="20px" color="#F45E43" font-family="helvetica">Hello World</mj-text>
-
+        <mj-image src="https://noelind.github.io/airbnb-email/assets/logo.png"></mj-image>
       </mj-column>
     </mj-section>
+
+    <mj-section padding="0px 0px">
+      <mj-column>
+        <mj-text css-class="divider">.</mj-text>
+      </mj-column>
+    </mj-section>
+
+    <mj-section padding="0px 0px">
+      <mj-column>
+        <mj-text font-size="20px" padding="40px 20px 20px 20px">Dear Resident,</mj-text>
+        <mj-text padding="20px" line-height="24px" font-size="16px">We would like to thank you for choosing to stay with Gennadi Villas this summer season. We hope you are safe among the ongoing coronavirus crisis and would like to extend our Christmas wishes to you and your loved ones. See you next year!</mj-text>
+      </mj-column>
+    </mj-section>
+
+    <mj-section padding="0px 0px">
+      <mj-column>
+        <mj-text padding="20px" line-height="24px" font-size="16px">Kind regards,</mj-text>
+      </mj-column>
+    </mj-section>
+
+    <mj-section padding="0px 0px 20px 0px">
+      <mj-column>
+        <mj-image src="https://noelind.github.io/airbnb-email/assets/signature.png"></mj-image>
+      </mj-column>
+    </mj-section>
+
+    <mj-section padding="0px 0px">
+      <mj-column>
+        <mj-text css-class="divider">.</mj-text>
+      </mj-column>
+    </mj-section>
+
+    <mj-section padding="20px 0px 0px 0px">
+      <mj-column>
+        <mj-image width="200px" src="https://noelind.github.io/airbnb-email/assets/logo.png"></mj-image>
+      </mj-column>
+    </mj-section>
+
+    <mj-section padding="0px 0px">
+      <mj-column>
+        <mj-text align="center" font-size="14px" padding="40px 20px 20px 20px" text-transform="uppercase" letter-spacing="2px">Contact us</mj-text>
+        <mj-text align="center" font-size="14px" padding="0px 20px 20px 20px">Email: <a href="mailto:ritas@gmail.com" style="color:black;">ritas@gmail.com</mj-text>
+        <mj-text align="center" font-size="14px" padding="0px 20px 20px 20px">Telephone: <a href="tel:+00306958741234" style="color:black;">+00306958741234</mj-text>
+        <mj-text align="center" font-size="14px" padding="0px 20px 20px 20px"><a href="www.facebook.com" style="color:black;">Facebook Page</mj-text>
+      </mj-column>
+    </mj-section>
+
   </mj-body>
 </mjml>
