--- a/airbnb-thankyou-xmas.mjml
+++ b/airbnb-thankyou-xmas.mjml
@@ -6,6 +6,8 @@
       <mj-text padding="0" />
       <mj-class name="blue" color="blue" />
       <mj-class name="big" font-size="20px" />
+      <mj-class name="header" padding="10px 0"/>
+      <mj-class name="header-logo"></mj-class>
       <mj-all padding="0" font-family="Poppins" />
     </mj-attributes>
     <mj-style>
@@ -20,20 +22,20 @@
 
 
     <!-- HEADER -->
-    <mj-section padding="20px 0px">
+    <mj-section mj-class="header">
       <mj-column>
-        <mj-image src="https://noelind.github.io/airbnb-email/assets/ritasamenities_logo.png"></mj-image>
+        <mj-image mj-class="header-logo" src="https://noelind.github.io/airbnb-email/assets/ritasamenities_logo2.png"></mj-image>
       </mj-column>
     </mj-section>
-
+<!-- 
     <mj-section padding="0px 0px">
       <mj-column>
         <mj-text css-class="divider">.</mj-text>
       </mj-column>
-    </mj-section>
+    </mj-section> -->
 
 
-    <mj-section padding="20px 0px">
+    <mj-section >
       <mj-column>
         <mj-image src="https://noelind.github.io/airbnb-email/assets/house1.jpg"></mj-image>
       </mj-column>
