--- a/airbnb-thankyou-xmas.mjml
+++ b/airbnb-thankyou-xmas.mjml
@@ -1,14 +1,19 @@
 <mjml>
   <mj-head>
-  <mj-font name="Poppins"
-       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" />
+    <mj-font name="futura-pt" href="https://use.typekit.net/wdk0dfz.css" />
     <mj-attributes>
       <mj-text padding="0" />
       <mj-class name="blue" color="blue" />
       <mj-class name="big" font-size="20px" />
-      <mj-class name="header" padding="10px 0"/>
+      <mj-class name="header" padding="10px 0" border-bottom="1px solid #cecece" ; />
       <mj-class name="header-logo"></mj-class>
-      <mj-all padding="0" font-family="Poppins" />
+      <mj-class name="body" padding="0 20px" />
+      <mj-class name="greeting" font-size="20px" font-weight="500" padding-bottom="15px" />
+      <mj-class name="wish" font-size="16px" line-height="30px" />
+      <mj-class name="closing-section" padding-top="50px" />
+      <mj-class name="closing-text" align="center" font-size="18px" />
+      <mj-class name="closing-team" align="center" font-size="18px" padding-top="10px" />
+      <mj-all padding="0" font-family="'futura-pt', Arial" />
     </mj-attributes>
     <mj-style>
       .divider div {
@@ -27,7 +32,7 @@
         <mj-image mj-class="header-logo" src="https://noelind.github.io/airbnb-email/assets/ritasamenities_logo2.png"></mj-image>
       </mj-column>
     </mj-section>
-<!-- 
+    <!-- 
     <mj-section padding="0px 0px">
       <mj-column>
         <mj-text css-class="divider">.</mj-text>
@@ -35,30 +40,30 @@
     </mj-section> -->
 
 
-    <mj-section >
+
+
+    <mj-section mj-class="body">
       <mj-column>
-        <mj-image src="https://noelind.github.io/airbnb-email/assets/house1.jpg"></mj-image>
+        <mj-image align="left" width="200px" src="https://noelind.github.io/airbnb-email/assets/xmas-deco.png" alt="" />
+      </mj-column>
+      <mj-column padding="50px 0px 0px 0px">
+        <mj-text mj-class="greeting">Dear Thomas,</mj-text>
+        <mj-text mj-class="wish">We would like to thank you for choosing to stay with Gennadi Villas this summer season. We hope you are safe among the ongoing coronavirus crisis and would like to extend our Christmas wishes to you and your loved ones. See you next year!</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section mj-class="body">
+      <mj-column padding="50px 0px 0px 0px">
+        <mj-text mj-class="wish">It would be an immense pleasure if you ever considered us for your next holiday. Feel free to get in touch with us personally at <a href="mailto:ritas.amenities@gmail.com">ritas.amenities@gmail.com</a> or <a href="mailto:georgeritas12@gmail.com">georgeritas12@gmail.com</a></mj-text>
       </mj-column>
     </mj-section>
 
-    <mj-section padding="0px 0px">
+    <mj-section mj-class="closing-section">
       <mj-column>
-        <mj-text font-size="20px" padding="40px 20px 20px 20px">Dear Resident,</mj-text>
-        <mj-text padding="20px" line-height="24px" font-size="16px">We would like to thank you for choosing to stay with Gennadi Villas this summer season. We hope you are safe among the ongoing coronavirus crisis and would like to extend our Christmas wishes to you and your loved ones. See you next year!</mj-text>
+        <mj-text mj-class="closing-text">Kind regards,</mj-text>
+        <mj-text mj-class="closing-team">The Ritas Amenities team</mj-text>
       </mj-column>
     </mj-section>
 
-    <mj-section padding="0px 0px">
-      <mj-column>
-        <mj-text padding="20px" line-height="24px" font-size="16px">Kind regards,</mj-text>
-      </mj-column>
-    </mj-section>
-
-    <mj-section padding="0px 0px 20px 0px">
-      <mj-column>
-        <mj-image src="https://noelind.github.io/airbnb-email/assets/signature.png"></mj-image>
-      </mj-column>
-    </mj-section>
 
     <mj-section padding="0px 0px">
       <mj-column>
