--- a/airbnb-thankyou-xmas-white.mjml
+++ b/airbnb-thankyou-xmas-white.mjml
@@ -1,5 +1,9 @@
 <mjml>
   <mj-head>
+    <mj-raw>
+      <meta name="color-scheme" content="light">
+      <meta name="supported-color-schemes" content="light">
+    </mj-raw>
     <!-- <mj-font name="futura-pt" href="https://use.typekit.net/wdk0dfz.css" /> -->
     <mj-font name="roboto" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" />
     <mj-breakpoint width="590px" />
@@ -24,6 +28,26 @@
         color: #ffffff !important;
         font-size: 1px !important;
       }
+
+      @media (prefers-color-scheme: dark) {
+        .logo-white {
+          display:block;
+        }
+
+        .logo-black {
+          display:none;
+        }
+      }
+
+      @media (prefers-color-scheme: light) {
+        .logo-white {
+          display:none;
+        }
+
+        .logo-black {
+          display:block;
+        }
+      }
     </mj-style>
   </mj-head>
   <mj-body>
@@ -36,12 +60,14 @@
       <mj-group>
 
         <mj-column vertical-align="middle" width="50%">
-          <mj-image align="left" width="141px" src="https://raw.githubusercontent.com/Noelind/airbnb-email/main/assets/ritas-amenities-logo-black-140.png" alt="Ritas Amenities Logo" />
+          <mj-image css-class="logo-black" align="left" width="141px" src="https://noelind.github.io/airbnb-email/assets/ritas-amenities-logo-black-140.png" alt="Ritas Amenities Logo" />
+          </mj-image>
+          <mj-image css-class="logo-white" align="left" width="141px" src="https://noelind.github.io/airbnb-email/assets/ritas-amenities-logo-black-140.png" alt="Ritas Amenities Logo" />
           </mj-image>
         </mj-column>
         <mj-column vertical-align="middle">
           <mj-text align="right">
-            <a href="https://www.airbnb.com/users/show/108284092and" target="_blank"><img src="https://raw.githubusercontent.com/Noelind/airbnb-email/main/assets/airbnb-small.png" alt="Ritas Amenities Airbnb"></a><span style="color:white;">----</span><a href="https://www.airbnb.com/users/show/108284092and" target="_blank"><img src="https://raw.githubusercontent.com/Noelind/airbnb-email/main/assets/booking.com small.png" alt="Ritas Amenities Booking.com"></a>
+            <a href="https://www.airbnb.com/users/show/108284092and" target="_blank"><img src="https://noelind.github.io/airbnb-email/assets/airbnb-small.png" alt="Ritas Amenities Airbnb" style="padding-right:20px"></a><a href="https://www.booking.com/hotel/gr/ritas-gennadi-villa.html" target="_blank"><img src="https://noelind.github.io/airbnb-email/assets/booking.comsmall.png" alt="Ritas Amenities Booking.com"></a>
           </mj-text>
 
 
@@ -50,7 +76,7 @@
 
     <mj-section mj-class="body" padding-bottom="0px">
       <mj-column>
-        <mj-image  src="https://raw.githubusercontent.com/Noelind/airbnb-email/main/assets/happy-holidays.png" alt="" />
+        <mj-image src="https://noelind.github.io/airbnb-email/assets/happy-holidays.png" alt="Happy Holidays!" />
       </mj-column>
 
     </mj-section>
@@ -66,10 +92,10 @@
 
     <mj-section mj-class="body">
       <mj-column padding="0px 0px 20px 0px">
-        <mj-button width="270px" href="mailto:ritas.amenities@gmail.com" border-radius="25px" background-color="#FF385C" color="white" font-size="16px">ritas.amenities@gmail.com <span style="font-size:20px;vertical-align:middle;">🠮</span></mj-button>
+        <mj-button width="270px" href="mailto:ritas.amenities@gmail.com?subject=Booking Enquiry" border-radius="25px" background-color="#FF385C" color="white" font-size="16px">ritas.amenities@gmail.com</mj-button>
       </mj-column>
       <mj-column padding="0px 0px 20px 0px">
-        <mj-button width="270px" href="mailto:georgeritas12@gmail.com" border-radius="25px"  background-color="#FF385C" color="white" font-size="16px">georgeritas12@gmail.com <span style="font-size:20px;vertical-align:middle;">🠮</span></mj-button>
+        <mj-button width="270px" href="mailto:georgeritas12@gmail.com?subject=Booking Enquiry" border-radius="25px" background-color="#FF385C" color="white" font-size="16px">georgeritas12@gmail.com</mj-button>
       </mj-column>
     </mj-section>
 
@@ -94,9 +120,9 @@
 
     <mj-section mj-class="body">
       <mj-column padding="0px 0px 20px 0px">
-        <mj-image href="https://www.booking.com/hotel/gr/ritas-gennadi-villa.html" target="_blank" border-radius="15px" border="2px solid white" padding="0px 0px 20px 0px" src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/306453125.jpg?k=386c3caa4329d7ad63d059dd70607d9f7afbe28adc24b402e866813be0c4aa31&o=&hp=1" alt="" />
+        <mj-image href="https://www.booking.com/hotel/gr/ritas-gennadi-villa.html" target="_blank" border-radius="15px" border="2px solid white" padding="0px 0px 20px 0px" src="https://noelind.github.io/airbnb-email/assets/gennadi-house.jpg" alt="Ritas Amenities Gennadi" />
         <mj-text padding="0px 0px 20px 0px" font-style="italic" color="black" align="center" font-size="16px">Ritas Amenities Gennadi</mj-text>
-        <mj-image href="https://www.airbnb.com/users/show/108284092and" target="_blank" border-radius="15px" border="2px solid white" padding="0px 0px 20px 0px" src="https://a0.muscache.com/im/pictures/dda14408-75a7-4fa1-a5ac-252d1a752a3e.jpg?im_w=1440" alt="" />
+        <mj-image href="https://www.airbnb.com/users/show/108284092and" target="_blank" border-radius="15px" border="2px solid white" padding="0px 0px 20px 0px" src="https://noelind.github.io/airbnb-email/assets/rodos-house.jpg" alt="Ritas Amenities Modern City House" />
         <mj-text padding="0px 0px 20px 0px" font-style="italic" color="black" align="center" font-size="16px">Ritas Amenities Modern City House</mj-text>
       </mj-column>
 
@@ -110,10 +136,10 @@
 
     <mj-section>
       <mj-column vertical-align="middle" padding-bottom="40px">
-        <mj-image width="127px" src="https://noelind.github.io/airbnb-email/assets/airbnb-og.png" alt="" href="https://www.airbnb.com/users/show/108284092and" />
+        <mj-image width="127px" src="https://noelind.github.io/airbnb-email/assets/airbnb-og.png" alt="Ritas Amenities Airbnb" href="https://www.airbnb.com/users/show/108284092and" />
       </mj-column>
       <mj-column vertical-align="middle" padding-bottom="40px">
-        <mj-image width="168px" src="https://noelind.github.io/airbnb-email/assets/booking.com-og.png" alt="" href="https://www.booking.com/hotel/gr/ritas-gennadi-villa.html" />
+        <mj-image width="168px" src="https://noelind.github.io/airbnb-email/assets/booking.com-og.png" alt="Ritas Amenities Booking.com" href="https://www.booking.com/hotel/gr/ritas-gennadi-villa.html" />
       </mj-column>
     </mj-section>
   </mj-body>
