--- a/airbnb-thankyou-xmas.mjml
+++ b/airbnb-thankyou-xmas.mjml
@@ -1,5 +1,9 @@
 <mjml>
   <mj-head>
+    <mj-raw>
+    <meta name="color-scheme" content="light">
+    <meta name="supported-color-schemes" content="light">
+    </mj-raw>
     <!-- <mj-font name="futura-pt" href="https://use.typekit.net/wdk0dfz.css" /> -->
     <mj-font name="roboto" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" />
     <mj-breakpoint width="590px" />
@@ -58,10 +62,10 @@
 
     <mj-section mj-class="body">
       <mj-column padding="0px 0px 20px 0px">
-        <mj-button width="270px" href="mailto:ritas.amenities@gmail.com" background-color="white" color="black" font-size="16px">ritas.amenities@gmail.com <span style="font-size:20px;vertical-align:middle;">🠮</span></mj-button>
+        <mj-button width="270px" href="mailto:ritas.amenities@gmail.com?subject=Booking Enquiry" background-color="white" color="black" font-size="16px">ritas.amenities@gmail.com</mj-button>
       </mj-column>
       <mj-column padding="0px 0px 20px 0px">
-        <mj-button width="270px" href="mailto:georgeritas12@gmail.com" background-color="white" color="black" font-size="16px">georgeritas12@gmail.com <span style="font-size:20px;vertical-align:middle;">🠮</span></mj-button>
+        <mj-button width="270px" href="mailto:georgeritas12@gmail.com?subject=Booking Enquiry" background-color="white" color="black" font-size="16px">georgeritas12@gmail.com</mj-button>
       </mj-column>
     </mj-section>
 
